--- a/front-end/src/assets/styles/base.css
+++ b/front-end/src/assets/styles/base.css
@@ -56,3 +56,12 @@ button {
 button:hover {
   transition: 223ms;
 }
+
+#root {
+  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
