small fix for styles and navigation

--- a/front-end/src/assets/styles/base.scss
+++ b/front-end/src/assets/styles/base.scss
@@ -52,9 +52,9 @@ a {
 
 button {
   transition: 223ms;
-}
-button:hover {
-  transition: 223ms;
+  &:hover {
+    transition: 223ms;
+  }
 }
 
 #root {
